[package]
name = "imparlance-md"
authors = ["Trevor Fox"]
version = "0.1.0"
edition = "2021"
description = "Extendable Markdown compiler written in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.90"
getrandom = { version = "0.2", features = ["js"] }
